crates/embedded-bitmap-font/tests/ui/drawable_text_mismatched_cell_heights_fail.stderr
error[E0080]: evaluation panicked: CellSizes ascii and cjk heights must match
  --> tests/ui/drawable_text_mismatched_cell_heights_fail.rs:14:5
   |
14 |     TextStyle::new(BinaryColor::On).cells(Size::new(4, 8), Size::new(8, 9)),
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `_TEXT` failed inside this call
   |
note: inside `embedded_bitmap_font::TextStyle::<BinaryColor>::cells`
  --> src/style.rs
   |
   |         self.cells = CellSizes::new(ascii, cjk);
   |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^
note: inside `CellSizes::new`
  --> src/style.rs
   |
   | /         assert!(
   | |             ascii.height == cjk.height,
   | |             "CellSizes ascii and cjk heights must match"
   | |         );
   | |_________^ the failure occurred here
